--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -15,6 +15,8 @@
 </style>
 {% endblock %}
 
+{% block back_button %}{% endblock %}
+
 {% block content %}
 <div class="max-w-md mx-auto mt-12">
     <div class="bg-white rounded-lg shadow-lg p-8">
